set next player

--- a/main.html
+++ b/main.html
@@ -9,9 +9,12 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="statesArea">
+        <p>NextPlayer:<span id="nextPlayer">x</span></p>
+    </div>
     <div class="gameArea">
         <div class="gridRow">
-            <button class="square" id="square"></button><button class="square"></button><button class="square"></button>
+            <button class="square"></button><button class="square"></button><button class="square"></button>
         </div>
         <div class="gridRow">
             <button class="square"></button><button class="square"></button><button class="square"></button>
