--- a/main.html
+++ b/main.html
@@ -1,27 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <script src="main.js"></script>
-    <title>Document</title>
-</head>
-<body>
-    <div class="statesArea">
-        <p>NextPlayer:<span id="nextPlayer">x</span></p>
-    </div>
-    <div class="gameArea">
-        <div class="gridRow">
-            <button class="square"></button><button class="square"></button><button class="square"></button>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="style.css" />
+        <script src="main.js"></script>
+        <title>Document</title>
+    </head>
+    <body>
+        <div class="statesArea">
+            <p>NextPlayer:<span id="nextPlayer">x</span></p>
         </div>
-        <div class="gridRow">
-            <button class="square"></button><button class="square"></button><button class="square"></button>
+        <div class="gameArea">
+            <div class="gridRow">
+                <button class="square" data-squareNum="0"></button>
+                <button class="square" data-squareNum="1"></button>
+                <button class="square" data-squareNum="2"></button>
+            </div>
+            <div class="gridRow">
+                <button class="square" data-squareNum="3"></button>
+                <button class="square" data-squareNum="4"></button>
+                <button class="square" data-squareNum="5"></button>
+            </div>
+            <div class="gridRow">
+                <button class="square" data-squareNum="6"></button>
+                <button class="square" data-squareNum="7"></button>
+                <button class="square" data-squareNum="8"></button>
+            </div>
         </div>
-        <div class="gridRow">
-            <button class="square"></button><button class="square"></button><button class="square"></button>
-        </div>   
-    </div>     
-</body>
+    </body>
 </html>
