raughly make system of checking win

--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
         <title>Document</title>
     </head>
     <body>
-        <div class="statesArea">
+        <div class="statesArea" id="statesArea">
             <p>NextPlayer:<span id="nextPlayer">x</span></p>
         </div>
         <div class="gameArea">
